# beta-trader

./: .env.example  .geminiignore  .gitignore  AGENTS.md  CLAUDE.md  README.md  config.yaml  docker-compose.yml  pyproject.toml  settings.json  sync-labels.yml
.continue/: config.json  config.yaml  mcp-servers.yaml  system 2.md  system.md
.continue/prompts/: architect.prompt  commit 2.prompt  commit.prompt  docgen.prompt  plan 2.prompt  plan.prompt  review 2.prompt  review.prompt  security.prompt  tests.prompt
.gemini/: GEMINI.md  config 2.yaml  config.yaml  instructions.md  styleguide.md
.gemini/prompts/: commit.prompt.md  plan.prompt.md  review.prompt.md
.github/: copilot-instructions.md  labels 2.yml  labels.yml
.github/workflows/: ci.yml  claude 2.yml  deploy.yml  linear-pr-link.yml  linear-to-notion-sync.yml  notion-spec-to-linear 2.yml  notion-spec-to-linear.yml
backend/: __init__.py  depth.py  main.py  middleware.py  models.py  settings.py  sse.py
council/: __init__.py  embedder.py  manager.py  store.py  types.py
docs/: INDEX.md  README.md  WORKFLOW.md
docs/adr/: 001-nautilus-fork.md  002-polymarket-adapter.md  003-kalshi-adapter.md  004-neural-models.md  005-cost-routing.md  006-deployment.md  README.md
docs/interfaces/: README.md  errors.md  events.md  types.md
docs/setup/: BRANCH_PROTECTION.md  (+1 more)
frontend/: index.html  package-lock.json  package.json
golden-repo-template/: README.md  setup.sh
intel/: __init__.py  cache.py  circuit_breaker.py  errors.py  events.py  orchestrator.py  retry.py  types.py
routing/: __init__.py  router.py
(+92 files in other folders)
